Issue #149 change fcst_var_val_1 from list to a single argument setting

--- a/metplotpy/plots/config/taylor_diagram_defaults.yaml
+++ b/metplotpy/plots/config/taylor_diagram_defaults.yaml
@@ -18,8 +18,7 @@ title_size: 1.8
 # setting
 event_equal: False
 
-fcst_var_val_1:
-  - DLWRF
+fcst_var_val_1: DLWRF
 series_val_1:
   # series_var_1
   model:
