--- a/metplotpy/plots/config/taylor_diagram_defaults.yaml
+++ b/metplotpy/plots/config/taylor_diagram_defaults.yaml
@@ -15,7 +15,7 @@ caption_offset: 0
 # axis parallel location adjustment (left/right)
 caption_align: 0 # -.1 in performance diagram
 
-# colors for each model, hexadecimal or color name
+# hexadecimal or color name
 colors:
   - "#ff0000FF"
   - "#ffd400FF"
@@ -31,9 +31,7 @@ legend_box: 'box'
 
 legend_inset:
   x: 0.1
-  y: -.1
-  # use this value for taylor_voc =False
-  #y: 0
+  y: 0.1 #-.1
 legend_ncol: 4
 legend_size: 0.8
 
@@ -50,14 +48,21 @@ plot_disp:
 # output file/plot
 plot_filename: ./taylor_diagram_default.png
 
-# These can be applied to the Taylor diagram
-# to determine the size and resolution of the plot.
+# size and resolution of the plot.
 plot_width: 11
 plot_height: 9
 # plot resolution in dpi (dots per inch)
 plot_res: 72
 
-# series symbols
+series_order:
+  - 1
+  - 2
+  - 3
+  - 4
+  - 5
+  - 6
+  - 7
+
 # Other supported symbols: small circle = ".", ring/hexagon = "H", rhombus/diamond="d"
 series_symbols:
   # point
@@ -88,6 +93,7 @@ stat_input: ../../../test/taylor_diagram/plot_dlwr_sample.data
 
 # Draw the standard deviation arcs on the diagram
 taylor_show_gamma: True
+
 # Show only positive values of correlation
 taylor_voc: False
 
@@ -211,7 +217,6 @@ lwd:
   - 5
   - 5
 
-
 # x-axis labels
 xaxis: Standard Deviation
 xlab_size:  1
@@ -235,7 +240,6 @@ ylab_weight: 1
 # y-axis ticks
 ytlab_orient: 1
 ytlab_size: 1.3
-
 
 
 # !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
@@ -267,14 +271,6 @@ plot_ci:
   - None
   - None
 
-series_order:
-  - 1
-  - 2
-  - 3
-  - 4
-  - 5
-  - 6
-  - 7
 
 con_series:
 # Only useful for line plots where consecutive points may be interspersed with NA values
