--- a/test/taylor_diagram/minimal_taylor_diagram.yaml
+++ b/test/taylor_diagram/minimal_taylor_diagram.yaml
@@ -1,3 +1,3 @@
-# minimal yaml file
+# minimal yaml file, replace the path-to to the
 stat_input: path-to/plot_dlwr_sample.data
 plot_filename: path-to/plot_dlwr_sample.png
