--- a/test/taylor_diagram/test_neg_and_pos_corr.yaml
+++ b/test/taylor_diagram/test_neg_and_pos_corr.yaml
@@ -6,3 +6,6 @@ plot_filename: ./test_neg_and_pos_corr_plot.png
 taylor_show_gamma: True
 # Show only positive values of correlation
 taylor_voc: False
+legend_inset:
+  x: 0.1
+  y: -0.25
