renamed to <plot_name>_custom.png

--- a/test/taylor_diagram/taylor_diagram_custom.yaml
+++ b/test/taylor_diagram/taylor_diagram_custom.yaml
@@ -2,7 +2,7 @@
 # custom config file to override some of the settings in the
 # default config file taylor_diagram_defaults.yaml
 stat_input: ./plot_dlwr_sample.data
-plot_filename: ./custom_taylor_diagram.png
+plot_filename: ./taylor_diagram_custom.png
 
 # change the caption text
 plot_caption: "Custom caption"
