removed reference to performance diagram

--- a/metplotpy/plots/config/taylor_diagram_defaults.yaml
+++ b/metplotpy/plots/config/taylor_diagram_defaults.yaml
@@ -13,7 +13,7 @@ caption_size: "8"
 # (up/down)
 caption_offset: 0
 # axis parallel location adjustment (left/right)
-caption_align: 0 # -.1 in performance diagram
+caption_align: 0
 
 # hexadecimal or color name
 colors:
