--- a/test/hovmoeller/hovmoeller.yaml
+++ b/test/hovmoeller/hovmoeller.yaml
@@ -3,7 +3,7 @@
 input_data: '/d1/projects/METcalcpy/METcalcpy_Data/TropicalDiagnostics/precip.erai.sfc.1p0.2x.2014-2016.nc'
 
 # ouput data directory
-output_plot_path: '/home/minnawin/METcalcpy/output/plots/hovmoeller/'
+output_plot_path: './'
 
 # plot start date, format: yyyy-mm-dd
 date_start: '2016-01-01'
