--- a/.github/workflows/unit_tests.yaml
+++ b/.github/workflows/unit_tests.yaml
@@ -31,16 +31,12 @@ jobs:
         python-version: ${{ matrix.python-version }}
         
     - name: Retrieve METcalcpy repository develop branch
-      uses: actions/checkout@v2
-      with:
-         name: dtcenter/METcalcpy
-         ref: refs/head/develop
-    
-    - name: Install the METcalcpy package using pip
       run: |
-          cd dtcenter/METcalcpy
-          python -m pip install -e .
-      
+         /usr/bin/git clone https://github.com/dtcenter/METcalcpy
+         cd METcalcpy
+         /usr/bin/git checkout develop
+         python -m pip install -e .
+            
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
