--- a/.github/workflows/unit_tests.yaml
+++ b/.github/workflows/unit_tests.yaml
@@ -41,6 +41,21 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install numpy==1.19.5
+        pip install pandas==1.1.5
+        pip install plotly==4.9.0
+        pip install imutils==0.53
+        pip install kaliedo==0.2.1
+        pip install matplotlib==3.3.4
+        pip install pytest==6.2.5
+        pip install PyYAML==5.4.1
+        pip install scikit-image==0.16.2
+        pip install scikit-learn==0.23.2
+        pip install scipy==1.5.3
+        pip install xarray==0.18.2
+        
+        
+        
     - name: Test with pytest
       run: |
           cd test/bar
