--- a/.github/workflows/unit_tests.yaml
+++ b/.github/workflows/unit_tests.yaml
@@ -45,7 +45,7 @@ jobs:
         pip install pandas==1.1.5
         pip install plotly==4.9.0
         pip install imutils==0.5.3
-        pip install kaliedo==0.2.1
+        pip install kaleido==0.2.1
         pip install matplotlib==3.3.4
         pip install pytest==6.2.5
         pip install PyYAML==5.4.1
