--- a/.github/workflows/unit_tests.yaml
+++ b/.github/workflows/unit_tests.yaml
@@ -72,9 +72,8 @@ jobs:
 
     - name: Test with pytest
       run: |
-          cd METplotpy
-          python -m pip install -e .
-          cd /METplotpy/test/bar
-          pytest test_bar.py
-          cd /METplotpy/test/box
+        
+          cd test/bar
+          ls 
+         
          
