--- a/.github/workflows/unit_tests.yaml
+++ b/.github/workflows/unit_tests.yaml
@@ -74,6 +74,8 @@ jobs:
       run: |
         
           cd test/bar
-          ls 
+          pytest test_bar.py
+          cd test/box
+          ls
          
          
