--- a/.github/workflows/unit_tests.yaml
+++ b/.github/workflows/unit_tests.yaml
@@ -70,12 +70,11 @@ jobs:
 
 
     - name: Test with pytest
-      env:
-        PYTHONPATH: "."
       run: |
         
           cd test/bar
-          python -m pytest test_bar.py
+          python 
+          import metplotpy
     
           
          
