replace wind_rose_default.png with wind_rose_custom.png for plot_filename so it is consistent with the other plots' user instructions

--- a/test/wind_rose/wind_rose_custom.yaml
+++ b/test/wind_rose/wind_rose_custom.yaml
@@ -29,6 +29,6 @@ angularaxis_ticktext:
   - 'E'
   - 'S'
   - 'W'
-plot_filename: ./wind_rose_default.png
+plot_filename: ./wind_rose_custom.png
 dump_points: True
 show_in_browser: False
