--- a/test/wind_rose/wind_rose_custom.yaml
+++ b/test/wind_rose/wind_rose_custom.yaml
@@ -29,6 +29,18 @@ angularaxis_ticktext:
   - 'E'
   - 'S'
   - 'W'
+
+# !!!!!!!! IMPORTANT !!!!!!
+# Uncomment the stat_input setting and specify the full path to the
+# point_stat_mpr.txt file
+stat_input: ./point_stat_mpr.txt
+
 plot_filename: ./wind_rose_custom.png
 dump_points: True
+
+# Optional, uncomment and set to directory to store the .points1 file
+# that is used by METviewer (created when dump_points_1 is set to True)
+# if dump_points_1 is True and this is uncommented, the points1 file
+# will be saved in the default location (i.e. where the input data file is stored).
+# points_path: '/dir_to_save_points1_file'
 show_in_browser: False
