--- a/.github/workflows/unit_tests.yaml
+++ b/.github/workflows/unit_tests.yaml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests the specified Python version
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python package
+name: Python tests
 
 on:
   push:
@@ -95,8 +95,8 @@ jobs:
           cd ../wind_rose
           pytest test_wind_rose.py
           cd ../histogram
-          #pytest test_prob_hist.py
-          #pytest test_rank_hist.py
+          pytest test_prob_hist.py
+          pytest test_rank_hist.py
           pytest test_rel_hist.py
           
     
