added histogram tests to list of tests to perform

--- a/.github/workflows/unit_tests.yaml
+++ b/.github/workflows/unit_tests.yaml
@@ -94,7 +94,11 @@ jobs:
           pytest test_taylor_diagram.py
           cd ../wind_rose
           pytest test_wind_rose.py
-          
+          cd ../histogram
+          pytest test_prob_hist.py  
+          pytest test_rank_hist.py  
+          pytest test_rel_hist.py  
+
     
           
          
