--- a/test/wind_rose/minimal_wind_rose.yaml
+++ b/test/wind_rose/minimal_wind_rose.yaml
@@ -3,3 +3,9 @@
 # input file and output file, respectively.
 stat_input: ./point_stat_mpr.txt
 plot_filename: ./wind_rose_default.png
+
+# Optional, uncomment and set to directory to store the .points1 file
+# that is used by METviewer (created when dump_points_1 is set to True)
+# if dump_points_1 is True and this is uncommented, the points1 file
+# will be saved in the default location (i.e. where the input data file is stored).
+#points_path: '/dir_to_save_points1_file'
