Issue #217 Added the start_from_zero configuration setting

--- a/metplotpy/plots/config/line_defaults.yaml
+++ b/metplotpy/plots/config/line_defaults.yaml
@@ -65,6 +65,7 @@ series_val_1: {}
 series_val_2: {}
 show_nstats: 'False'
 show_signif: []
+start_from_zero: 'False'
 stat_input: ../../../test/line/line.data
 sync_yaxes: 'False'
 title: test title
