Issue #217 fixed start_from_zero, should be a setting, not a list item from the previous setting

--- a/test/line/custom_line_from_zero.yaml
+++ b/test/line/custom_line_from_zero.yaml
@@ -154,7 +154,7 @@ show_signif:
 - 'False'
 - 'False'
 - 'False'
-- start_from_zero: 'True'
+start_from_zero: 'True'
 stat_input: ./line.data
 sync_yaxes: 'False'
 title: test title
