--- a/.github/workflows/requirements.txt
+++ b/.github/workflows/requirements.txt
@@ -16,15 +16,14 @@ imageio==2.6.1
 importlib-metadata==4.11.3
 imutils==0.5.4
 iniconfig==1.1.1
-kaleido==0.0.3
 kiwisolver==1.4.2
 locket==0.2.0
 matplotlib==3.5.1
+matplotlib-base==3.5.1
 munkres==1.1.4
 netCDF4==1.5.7
 networkx==2.7.1
 numpy==1.22.3
-opencv-python>=4.5.3
 packaging==21.3
 pandas==1.2.3
 partd==1.2.0
@@ -36,7 +35,6 @@ pooch==1.6.0
 py==1.11.0
 pycparser==2.21
 pyOpenSSL==22.0.0
-opencv-python>=4.5
 pyparsing==3.0.7
 PyQt5==5.12.3
 PyQt5_sip==4.19.18
@@ -44,6 +42,7 @@ PyQtChart==5.12
 PyQtWebEngine==5.12.1
 pytest==7.1.1
 python-dateutil==2.8.2
+python-kaleido==0.0.3
 pytz==2022.1
 PyWavelets==1.1.1
 PyYAML==5.4.1
