--- a/.github/workflows/unit_tests.yaml
+++ b/.github/workflows/unit_tests.yaml
@@ -21,7 +21,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.8.12"]
+        python-version: ["3.8.6", "3.8.12"]
 
     steps:
     - uses: actions/checkout@v2
@@ -41,7 +41,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        
         
 #   Checking the branch name, not necessary but useful when setting things up. 
 #     - name: Extract branch name
