--- a/metplotpy/plots/config/hovmoeller_defaults.yaml
+++ b/metplotpy/plots/config/hovmoeller_defaults.yaml
@@ -1,6 +1,5 @@
 plot_filename: erai_precip.png
-input_data_dir: ./
-input_data_file: precip.erai.sfc.1p0.2x.2014-2016.nc
+input_data_file: ./precip.erai.sfc.1p0.2x.2014-2016.nc
 
 plot_height: 800
 plot_width: 1200
