--- a/test/hovmoeller/custom_hovmoeller.yaml
+++ b/test/hovmoeller/custom_hovmoeller.yaml
@@ -1,9 +1,22 @@
-plot_filename: /Volumes/d1/minnawin/feature_213_hovmoeller/METplotpy/test/hovmoeller/hovmoeller_custom_plot.png
-input_data_file: precip.erai.sfc.1p0.2x.2014-2016.nc
-input_data_dir: /Volumes/d1/minnawin/feature_213_hovmoeller/METplotpy/WorkingDir
+plot_filename: ./hovmoeller_custom_plot.png
+input_data_file: /Volumes/d1/minnawin/feature_213_hovmoeller/METplotpy/WorkingDir/precip.erai.sfc.1p0.2x.2014-2016.nc
 plot_height: 400
 plot_width: 600
 title: Custom ERAI Precip
 title_size: 10
 xy_label_font_size: 10
 
+date_start: 2016-02-01
+date_end: 2016-03-03
+
+lat_max: 4
+lat_min: -4
+
+var_name: precip
+var_units: mm / day
+unit_conversion: 250
+
+contour_min: 0.2
+contour_max: 1.6
+contour_del: 0.2
+colorscale: 'BuPu'
