Feature 213 hovmoeller configurable (#236)
* #213 remove timezone information passed into numpy datetime64, this is deprecated and will raise an error in the future.

* #213 updates to make things more configurable

* #213 updates to accomodate custom config file and configurability

* Issue #213

* Issue #213 expected Hovmoeller

* Delete hovmoeller.yaml

no longer relevant.  Configuration file corresponds to previous plot code.

* Issue #213 updates to tests and config files

* Issue #213, use METcalcpy's parser to read in the yaml file that has ENV variables set. This supports the s2s Hovmoeller METplus use case

* Issue #213 remove argparse, logger imports and remove the original method of getting the configuration dictionary

* Issue #213 input_data_file setting is more consistent with other default config files

* Issue #213 use only the input_data_file to handle path and filename

* Issue #213 updates to the input_data_file setting

* Issue #213 updates to test

* Issue #213. Create the output directory for the plot if it doesn't already exist.  This is especially important for plotly

* Issue #213 example Hovmoeller plots for default/minimal and custom config

* Issue #213 replace hard-coded path to data with generic path

* Issue #213 add more information in the comment block

* Issue #213 updates for the configurable hovmoeller plot

* Issue #213 updates for updates to refactored, configurable hovmoeller script

* Issue #213 update to Python package versions

* Issue #213 update versions that correspond to Python 3.8.6

* Issue #213 clean up some formatting

* fix instructions- originally incorrectly instructed user to modify path to the METPLOTPY_BASE/xyz but should actually be changes to the WORKING_DIR/

* Update instructions for PYTHONPATH

* correct the instructions for modifying the config files

* Issue #213 fix incorrect instructions

* Issue #213 add instructions for setting PYTHONPATH

--- a/metplotpy/plots/config/hovmoeller_defaults.yaml
+++ b/metplotpy/plots/config/hovmoeller_defaults.yaml
@@ -1,12 +1,19 @@
 plot_filename: erai_precip.png
-height: 800
-width: 1200
+input_data_file: ./precip.erai.sfc.1p0.2x.2014-2016.nc
+
+plot_height: 800
+plot_width: 1200
+# plot title
 title: ERAI Precipitation
 
-font_size: 20
+# Font size for the x-axis and y-axis labels and the title font size
+xy_label_font_size: 20
+title_size: 20
 
-xaxis_title: Longitude
-yaxis_title: Time
+# xaxis title
+xaxis: Longitude
+# yaxis title
+yaxis: Time
 
 date_start: 2016-01-01
 date_end: 2016-03-31
@@ -22,3 +29,4 @@ contour_min: 0.2
 contour_max: 1.6
 contour_del: 0.2
 colorscale: 'BuPu'
+
