do not produce html #232

--- a/test/revision_series/custom_revision_series.yaml
+++ b/test/revision_series/custom_revision_series.yaml
@@ -13,7 +13,7 @@ colors:
 con_series:
 - 1
 - 1
-create_html: 'True'
+create_html: 'False'
 dump_points_1: 'True'
 equalize_by_indep: 'False'
 event_equal: 'False'
