--- a/metplotpy/plots/fv3_physics_tend/fv3_physics_tend_defaults.yaml
+++ b/metplotpy/plots/fv3_physics_tend/fv3_physics_tend_defaults.yaml
@@ -37,7 +37,7 @@ tendency_varnames:
     - dv3dt_shalcnv
     - dv3dt_nophys
 
-# Name of variables in history file that contain the temperature, moisture, wind at time zero.
+# Name of variables in history file that contain the temperature, moisture, wind at time zero (initialization time).
 time0_varname:
     tmp :  tmp_i
     spfh:   qv_i
@@ -58,7 +58,7 @@ extent:
     - 22.1
     - 49.5
 
-# Found standard_parallel by trial and error with smaller and smaller tolerances given to mepy.assign_y_x(). longitude is mean.
+# Found FV3 standard_parallel by trial and error with smaller and smaller tolerances given to mepy.assign_y_x(). longitude is mean.
 standard_parallel : 38.139
 
 # color map
@@ -66,5 +66,4 @@ cmap : "Spectral_r"
 
 # resolution (dots per inch) of output
 dpi : 150
-
 
