--- a/requirements.txt
+++ b/requirements.txt
@@ -1,62 +1,15 @@
-attrs==21.4.0
-certifi==2021.10.8
-cffi==1.15.0
-cftime==1.5.1.1
-charset-normalizer==2.0.12
-cloudpickle==2.0.0
-cryptography==35.0.0
-cycler==0.11.0
-cytoolz==0.11.0
-dask==2022.3.0
-fonttools==4.33.2
-fsspec==2022.2.0
-idna==3.3
-imagecodecs-lite==2019.12.3
-imageio==2.6.1
-importlib-metadata==4.11.3
-imutils==0.5.4
-iniconfig==1.1.1
-kaleido==0.0.3
-kiwisolver==1.4.2
-locket==0.2.0
-matplotlib==3.5.1
-munkres==1.1.4
-netCDF4==1.5.7
-networkx==2.7.1
-numpy==1.22.3
-opencv-python>=4.5.3
-packaging==21.3
-pandas==1.2.3
-partd==1.2.0
-Pillow==9.1.0
-plotly==5.7.0
-pluggy==1.0.0
-pooch==1.6.0
-py==1.11.0
-pycparser==2.21
-pyOpenSSL==22.0.0
-opencv-python>=4.5
-pyparsing==3.0.7
-PyQt5==5.12.3
-PyQt5_sip==4.19.18
-PyQtChart==5.12
-PyQtWebEngine==5.12.1
-pytest==7.1.1
-python-dateutil==2.8.2
-pytz==2022.1
-PyWavelets==1.1.1
-PyYAML==5.4.1
-requests==2.27.1
-scikit-image==0.18.1
-scipy==1.8.0
-six==1.16.0
-tenacity==8.0.1
-tifffile==2019.7.26.2
-tomli==2.0.1
-toolz==0.11.2
-tornado==6.1
-typing_extensions==4.1.1
-unicodedata2==14.0.0 
-urllib3==1.26.9
+matplotlib==3.5.2
+scipy==1.8.1
+plotly==5.9.0
 xarray==2022.3.0
-zipp==3.7.0
+netcdf4==1.6.0
+pyyaml==6.0
+kaleido>=0.2.1
+imageio==2.19.3
+imutils==0.5.4
+scikit-image==0.19.3
+pint==0.19.2
+metpy==1.3.1
+pytest
+pandas==1.2.3
+opencv-python
