--- a/metplotpy/plots/hovmoeller/custom_hovmoeller.yaml
+++ b/metplotpy/plots/hovmoeller/custom_hovmoeller.yaml
@@ -1,3 +1,2 @@
-plot_filename: /Volumes/d1/minnawin/feature_213_hovmoeller/METplotpy/WorkingDir/hovmoeller_plot.png
-input_data_file: precip.erai.sfc.1p0.2x.2014-2016.nc
-input_data_dir: /Volumes/d1/minnawin/feature_213_hovmoeller/METplotpy/WorkingDir
+plot_filename: /path-to/METplotpy/WorkingDir/hovmoeller_plot.png
+input_data_file: /path-to/precip.erai.sfc.1p0.2x.2014-2016.nc
