--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
-matplotlib==3.6.3
-scipy==1.10.0
-plotly==5.13.0
-xarray==2023.1.0
-netcdf4==1.6.2
-pyyaml==6.0
-kaleido>=0.2.1
+cartopy==0.21.1
 imageio==2.25.0
 imutils==0.5.4
-scikit-image==0.19.3
-pint==0.20.1
+kaleido>=0.2.1
+matplotlib==3.6.3
 metpy==1.4.0
+netcdf4==1.6.2
+numpy==1.24.1
+opencv-python>=4.7.0
 pytest>=7.2.1
 pandas==1.5.2
-opencv-python>=4.7.0
+pint==0.20.1
+plotly==5.13.0
+pyyaml==6.0
+scikit-image==0.19.3
+scipy==1.10.0
+xarray==2023.1.0
