--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ matplotlib==3.5.2
 scipy==1.8.1
 plotly==5.9.0
 xarray==2022.3.0
-netcdf4==1.6.0
+netcdf4==1.6.2
 pyyaml==6.0
 kaleido>=0.2.1
 imageio==2.19.3
@@ -10,6 +10,6 @@ imutils==0.5.4
 scikit-image==0.19.3
 pint==0.19.2
 metpy==1.3.1
-pytest
+pytest>=7.2
 pandas==1.5.1
 opencv-python
