--- a/requirements.txt
+++ b/requirements.txt
@@ -12,5 +12,7 @@ plotly==5.13.0
 pytest>=7.2.1
 pyyaml==6.0
 scikit-image==0.19.3
-scipy==1.10.0
+scipy==1.9.3  
 xarray==2023.1.0
+cartopy==0.21.1
+eofs==1.4.0
