--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -25,6 +25,7 @@ jobs:
         run: |
           python -m pip install --upgrade python-dateutil requests sphinx \
           sphinx-gallery matplotlib Pillow sphinx_rtd_theme
+          python -m pip install -r docs/requirements.txt
       - name: Build docs
         run: ./.github/jobs/build_documentation.sh   
       - uses: actions/upload-artifact@v3
