--- a/.github/workflows/unit_tests.yaml
+++ b/.github/workflows/unit_tests.yaml
@@ -41,6 +41,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        python -m pip install cartopy
         
 #   Checking the branch name, not necessary but useful when setting things up. 
 #     - name: Extract branch name
