Added paths to ignore

--- a/.github/workflows/trigger_metplus.yml
+++ b/.github/workflows/trigger_metplus.yml
@@ -6,6 +6,10 @@ on:
       - develop
     paths-ignore:
       - 'docs/**'
+      - '.github/pull_request_template.md'
+      - '.github/ISSUE_TEMPLATE/**'
+      - '**/README.md'
+      - '**/LICENSE.md'
 
 jobs:
   trigger_metplus:
