Added paths to ignore

--- a/.github/workflows/unit_tests.yaml
+++ b/.github/workflows/unit_tests.yaml
@@ -10,7 +10,14 @@ on:
       - develop-ref
       - feature_*
       - main_*
-      - bugfix_*
+      - bugfix_*    
+    paths-ignore:
+      - 'docs/**'
+      - '.github/pull_request_template.md'
+      - '.github/ISSUE_TEMPLATE/**'
+      - '**/README.md'
+      - '**/LICENSE.md'
+      
   pull_request:
     types: [opened, reopened, synchronize]
 
