internal issue #47 added logging settings to default config files

--- a/metplotpy/plots/config/ens_ss_defaults.yaml
+++ b/metplotpy/plots/config/ens_ss_defaults.yaml
@@ -31,6 +31,9 @@ legend_size: 0.8
 line_type: None
 list_stat_1: []
 list_stat_2: []
+
+log_filename: /tmp/enss_ss.log
+log_level: 'DEBUG'
 mar:
 - 8
 - 4
