--- a/metplotpy/plots/config/box_defaults.yaml
+++ b/metplotpy/plots/config/box_defaults.yaml
@@ -25,6 +25,8 @@ line_type: None
 list_stat_1: []
 list_stat_2: []
 
+log_filename: /tmp/box.log
+log_level: 'DEBUG'
 mar:
 - 8
 - 4
@@ -112,4 +114,3 @@ caption_offset: 3
 caption_weight: 1
 caption_align: 0
 caption_col: '#333333'
-
