--- a/metplotpy/plots/config/contour_defaults.yaml
+++ b/metplotpy/plots/config/contour_defaults.yaml
@@ -33,6 +33,9 @@ legend_inset:
 legend_ncol: 3
 legend_size: 0.8
 line_type: None
+
+log_filename: /tmp/contour.log
+log_level: 'DEBUG'
 mar:
 - 8.0
 - 4.0
