--- a/metplotpy/plots/config/hist_defaults.yaml
+++ b/metplotpy/plots/config/hist_defaults.yaml
@@ -29,6 +29,8 @@ legend_ncol: 1
 legend_size: 0.8
 line_type: None
 list_stat_1: []
+log_filename: /tmp/hist.log
+log_level: 'DEBUG'
 mar:
 - 8.0
 - 4.0
