--- a/metplotpy/plots/config/revision_box_defaults.yaml
+++ b/metplotpy/plots/config/revision_box_defaults.yaml
@@ -36,6 +36,8 @@ legend_inset:
 legend_ncol: 3
 legend_size: 0.8
 list_stat_1: []
+log_filename: /tmp/revision_box.log
+log_level: 'DEBUG'
 mar:
 - 8.0
 - 4.0
