--- a/metplotpy/plots/config/revision_series_defaults.yaml
+++ b/metplotpy/plots/config/revision_series_defaults.yaml
@@ -26,6 +26,8 @@ legend_inset:
 legend_ncol: 3
 legend_size: 0.8
 list_stat_1: []
+log_filename: /tmp/revision_series.log
+log_level: 'DEBUG'
 mar:
 - 8
 - 4
@@ -82,4 +84,3 @@ ytlab_horiz: 0.5
 ytlab_orient: 1
 ytlab_perp: 0.5
 ytlab_size: 1
-
