--- a/metplotpy/plots/config/taylor_diagram_defaults.yaml
+++ b/metplotpy/plots/config/taylor_diagram_defaults.yaml
@@ -25,7 +25,7 @@ colors:
   - "#1500ff" # royal blue
   - "#7f00ff" # purple
 
-fcst_var_val_1: DLWRF
+fcst_var_val_1: {DLWRF}
 
 legend_box: 'box'
 
@@ -34,6 +34,7 @@ legend_inset:
   y: -0.25
 legend_ncol: 4
 legend_size: 0.8
+
 log_filename: /tmp/taylor_diagram.log
 log_level: 'DEBUG'
 
